--- a/public/styles.css
+++ b/public/styles.css
@@ -38,3 +38,56 @@
       padding: 5px 10px;
       border-radius: 5px;
     }
+
+    .box
+{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+section
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 1vh;
+  
+
+}
+.circle
+{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border: 40px solid #000;
+    border-radius: 50%;
+
+}
+
+.dot
+{
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    transform-origin: 100px;
+    animation: animeDot 2s linear infinite;
+
+}
+
+@keyframes animeDot {   
+    0%{
+        transform: translateY(-50%) rotate(0deg); 
+    }
+    100%{
+        transform: translateY(-50%) rotate(360deg); 
+    }
+    
+}
