--- a/src/components/BlogComponents/BlogBody/ExpandBlogPostModal/styles.css
+++ b/src/components/BlogComponents/BlogBody/ExpandBlogPostModal/styles.css
@@ -74,15 +74,30 @@
       transform: scale(0.8);
     }
   }
-  @media screen and (max-width: 425px) {
+  @media screen and (max-width: 620px) {
     .postOwnerDiv{
-      transform: scale(0.7);
+      display: none;
+      
     }
+   
   }
+  
  
 
   .post-render img {
     width: 90%;
     height: auto;
     
+  }
+  .post-render {
+    width: 98%;
+    height: auto;
+    min-width: 100px;
+    
+  }
+
+  @media (max-width: 620px) {
+    .socialNav{
+      right: 3px !important;
+    }
   }
