--- a/src/components/BlogComponents/BlogBody/ExpandBlogPostModal/styles.css
+++ b/src/components/BlogComponents/BlogBody/ExpandBlogPostModal/styles.css
@@ -3,10 +3,17 @@
     position: sticky;
     top: 10%;
     right: 0%;
-    background-color: #00000066;
+    
     padding: 1%;
     width: 100%;
     height: fit-content;
+    /* From https://css.glass */
+background: rgba(255, 255, 255, 0.19);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(7.7px);
+-webkit-backdrop-filter: blur(7.7px);
+border: 1px solid rgba(255, 255, 255, 0.25);
     
     h5{
       margin-bottom: -10%;
@@ -30,12 +37,13 @@
   cursor: pointer;
   margin-bottom: 2%;
 }
+  
 
 /* button styling */
 .button {
   --border-right: 6px;
-  --text-stroke-color: rgba(255,255,255,0.6);
-  --animation-color: #37FF8B;
+  --text-stroke-color: #000;
+  --animation-color: #F692BE;
   --fs-size: 1em;
   letter-spacing: 3px;
   text-decoration: none;
