--- a/public/styles.css
+++ b/public/styles.css
@@ -3,14 +3,19 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background-color: #ffffff;
-      border: 1px solid #cccccc;
-      border-radius: 5px;
+      
       padding: 10px;
       max-width: 250px;
       display: none; /* Inicialmente oculto */
       grid-template-columns: 1fr 2fr;
       gap: 5px;
+      background: rgba(255, 255, 255, 0.19);
+      border-radius: 2px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    color: white;
       
     }
     .InstallLogo{
@@ -25,7 +30,7 @@
     }
 
     .install-button {
-      background-color: #007bff;
+      background-color: #8F7EE9;
       color: #fff;
       border: none;
       padding: 5px 10px;
