--- a/src/components/StyledButtons/LinkSocialSharer/style.css
+++ b/src/components/StyledButtons/LinkSocialSharer/style.css
@@ -20,10 +20,15 @@
   .tooltip-wrapper{
     
     width: 170px;
-    height: 170px;
+    height: 120px;
     justify-content: center;
     align-items: center;
     display: flex;
+    background: rgba(255, 255, 255, 0.2);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
   }
   .tooltip-wrapper:hover .tooltip-container {
     background: #fff;
