--- a/src/components/StyledButtons/LinkSocialSharer/style.css
+++ b/src/components/StyledButtons/LinkSocialSharer/style.css
@@ -19,16 +19,17 @@
   }
   .tooltip-wrapper{
     
-    width: 170px;
-    height: 120px;
-    justify-content: center;
-    align-items: center;
+    width: 100px;
+    height: 81px;
+    align-self: end;
     display: flex;
     background: rgba(255, 255, 255, 0.2);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    flex-direction: column;
+    align-items: center;
   }
   .tooltip-wrapper:hover .tooltip-container {
     background: #fff;
