--- a/public/styles.css
+++ b/public/styles.css
@@ -3,14 +3,14 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
-      
+      z-index: 99;
       padding: 10px;
       max-width: 250px;
       display: none; /* Inicialmente oculto */
       grid-template-columns: 1fr 2fr;
       gap: 5px;
       background: rgba(56, 52, 52, 0.514);
-      border-radius: 2px;
+      border-radius: 10px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(2px);
     -webkit-backdrop-filter: blur(2px);
